# offline_particles

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ruff.yml
cmake/: kernels.cmake
src/offline_particles/: __init__.py  fields.py  fieldset.py  interpolation.py  kernel_tools.py  launcher.py  particle_kernel.py  particle_simulation.py  particles.py  simulation.py  spatial_arrays.py  tasks.py  timesteppers.py
src/offline_particles/ROMS/: rk2_w_advection.py  vertical_coordinate.py
src/offline_particles/events/: __init__.py  _events.py  _schedulers.py
src/offline_particles/kernels/: __init__.py  _core.pxd  _core.pyx  _kernels.py  interpolation.py  status.pxd  status.pyi  status.pyx  validation.py  validation.pyi  validation.pyx
src/offline_particles/kernels/ROMS/: _vertical_coordinate.pxd  _vertical_coordinate.pyx  rk2_w_advection.pyx  vertical_coordinate.pxd
src/offline_particles/kernels/_interpolation/: linear.pxd
src/offline_particles/kernels/output/: __init__.py  linear_interpolation.pyi  linear_interpolation.pyx
src/offline_particles/kernels/roms/: __init__.py  _roms_core.pyi  _roms_core.pyx  ab3_w_advection.pyi  ab3_w_advection.pyx  rk2_w_advection.pyi  rk2_w_advection.pyx
src/offline_particles/models/roms/: __init__.py
src/offline_particles/output/: __init__.py  _linear_interpolation.py  _output.py  _zarr_writer.py
src/roms_particles/: __init__.py  fields.py  fieldset.py  kernel.py  kernel_data.py  kernel_tools.py  launcher.py  launchers.py  particle_simulation.py  spatial_arrays.py  timesteppers.py
