[project]
name = "offline-particles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jamie", email = "hilditch@stanford.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "dask>=2025.11.0",
    "numba>=0.62.1",
    "numpy>=2.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]

[tool.ruff.lint]
extend-select = ["I"]