[project]
authors = [
  {name = "Jamie", email = "hilditch@stanford.edu"},
]
dependencies = [
  "dask>=2025.11.0",
  "numpy>=2.3.5",
  "zarr>=3.1.5",
]
description = "Add your description here"
name = "offline-particles"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[build-system]
requires = ["scikit-build-core", "cython", "cython-cmake"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
  "cython-lint>=0.18.1",
  "pre-commit>=4.5.1",
  "ruff>=0.14.6",
  "ty>=0.0.8",
]

[tool.ruff.lint]
extend-select = ["I"]
line-length = 120
ignore = ["E266"]

[tool.cython-lint]
paths = ["src"]
max-line-length = 120
ignore = ["E266"]